--- a/views/booking_categories_management.new.erb
+++ b/views/booking_categories_management.new.erb
@@ -66,6 +66,27 @@
 <script type="text/tmpl" id="element_template_form">
               
      <form name="element" method="POST">
+      <%% if (entity == null) { %>
+        <div class="form-fields">
+          <div class="formrow">
+            <label class="fieldtitle"><%= t.booking_category_management.form.code.label %></label>
+            <input type="text" maxlength="20" id="code" name="code" class="fieldcontrol" <%% if (entity) {%> value="<%%=entity.code %>" <%% } %>/>
+          </div>
+          <div class="formrow">
+            <label class="fieldtitle"><%= t.booking_category_management.form.name.label %></label>
+            <input type="text" maxlength="80" id="name" name="name" class="fieldcontrol" <%% if (entity) { %> value="<%%=entity.name%>" <%% } %>/>
+          </div>
+          <div class="formrow">
+            <label class="fieldtitle"><%= t.booking_category_management.form.type.label %></label>
+            <select class="fieldcontrol" name="type" id="type"/>
+          </div>              
+          <div class="bottom-navigation-bar navigation-bar">
+            <div class="navigation-bar-crud-buttons">
+              <input type="submit" class="create-entity-button action-button entity-management-button" value="<%=t.entitymanagement.create%>"/>
+          </div>
+        </div>               
+        </div>
+      <%% } else { %>  
         <div class="form-fields">
                                    
           <div class="container_12"> 
@@ -148,6 +169,7 @@
                 <%% } %>
              </div>
         </div>
+      <%% } %>  
      
      </form>
      
