--- a/views/booking_edit_pickupreturn.erb
+++ b/views/booking_edit_pickupreturn.erb
@@ -6,111 +6,123 @@
         #extras tbody .table-cell {
         	padding: 16px 4px 16px 4px;
         }
+        #new_extras tbody .table-cell {
+          padding: 12px 4px 12px 4px;
+        }        
      </style>
 
-     <h3><%=t.booking_management_edit.title%></h3>
-     
-     <div class="alert">
-       <%=t.booking_management_edit.description%>
+     <div class="top-navigation-bar">
+       <h2 class="entity-title"><%=t.booking_management_edit.title%></h3>
      </div>
 
-     <div class="guiblock">
-        <div class="container_12">
-      	  <div class="grid_6">
-            <div class="element_template">
-              <div class="entity-field">
-                <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.id %></span>
-                <span class="entity-fieldvalue"><%= booking.id %></span>
-              </div>
-            </div>  
+     <div class="admin_content_wrapper">
+       <div class="alert">
+         <%=t.booking_management_edit.description%>
+       </div>
+
+       <div class="guiblock">
+          <div class="container_12">
+      	    <div class="grid_6">
+              <div class="element_template">
+                <div class="entity-field">
+                  <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.id %></span>
+                  <span class="entity-fieldvalue"><%= booking.id %></span>
+                </div>
+              </div>  
+            </div>
+      	    <div class="grid_6">
+              <div class="element_template">
+                <div class="entity-field">
+                  <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.customer_title %></span>
+                  <span class="entity-fieldvalue"><%= booking.customer_name %> <%= booking.customer_surname %></span>
+                </div>
+              </div>      	 	
+      	    </div>
           </div>
-      	  <div class="grid_6">
-            <div class="element_template">
-              <div class="entity-field">
-                <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.customer_title %></span>
-                <span class="entity-fieldvalue"><%= booking.customer_name %> <%= booking.customer_surname %></span>
-              </div>
-            </div>      	 	
-      	  </div>
-        </div>
-     </div>
+       </div>
 
-	  <div id="item-selection" class="element-form-detail">
-		 <form id="reservation" class="top-margin" name="reservation">
-		  <div class="container_12">
-		    <div class="grid_4">
-		      <div class="formrow">
-		      	<label for="datefrom" id="labeldatefrom" class="fieldtitle">
-		      		<%=(booking_item_family.start_date_literal==:arrival)?(t.new_booking.arrival_date):(t.new_booking.pickup_date)%>
-		      	</label> 
-		      	<input type="text" name="date_from" id="date_from" class="date_control" size="10" maxlength="10"/>
-		      	<% if booking_item_family.time_to_from %>
-		      	<input type="text" name="time_from" id="time_from" maxlength="5" size="5" value="<%=booking.time_from%>"/>
-                <% end %>
-		      </div>
-              <% if booking_item_family.pickup_return_place %>
-		      <div class="formrow">
-	              <div class="collection_place">
-	                 <label for="pickup_place" class="fieldtitle"><%=t.new_booking.pickup_place%></label>
-	                 <select name="pickup_place" class="fieldcontrol" id="pickup_place">
-	                 </select>
-	              </div>
-	              <div id="other_pickup_place" class="top-margin" style="display:none;">
-	                 <input type="text" name="pickup_place_other" id="pickup_place_other" maxlength="80" size="28"  placeholder="<%=t.new_booking.pickup_place%>"/>
-	              </div>
-	              <input type="hidden" name="pickup_place_value" id="pickup_place_value"/>
-	          </div>          		      	
-	          <% end %>	    
-	      </div>
-	      <div class="grid_4">   
-		      <div class="formrow">
-		      	  <label for="dateto" id="labeldateto" class="fieldtitle">
-		      	  <%=(booking_item_family.start_date_literal==:arrival)?(t.new_booking.departure_date):(t.new_booking.return_date)%>
-		      	  </label> 
-		      	  <input type="text" name="date_to" id="date_to" class="date_control" size="10" maxlength="10"/>
-		      	  <% if booking_item_family.time_to_from %>
-		      	  <input type="text" name="time_to" id="time_to" maxlength="5" size="5" value="<%=booking.time_to%>"/>
-		      	  <% end %>
-		      </div>
-	        <% if booking_item_family.pickup_return_place %>
-	        <div class="formrow">
-	               <div class="return_place">
-	                  <label for="return_place" class="fieldtitle"><%=t.new_booking.return_place%></label>
-	      	          <select name="return_place" id="return_place" class="fieldcontrol">
-	                  </select>
-                   </div>
-	               <div id="other_return_place" class="top-margin" style="display:none;">
-	                  <input type="text" name="return_place_other" id="return_place_other" maxlength="80" size="28" placeholder="<%=t.new_booking.return_place%>"/>  
-	               </div>
-	               <input type="hidden" name="return_place_value" id="return_place_value"/>
-	        </div>
-	        <% end %>
-	      </div>
-		  </div>
-
-      <div id="situation_change" style="display:none">
-            
-           <div class="container_12 top-separator top-margin-2lines">
-             <div class="grid_6">
-               <h3 class="centered_text"><%=t.booking_management_edit.form.current_situation%></h3>            	
+       <div id="item-selection" class="element-form-detail">
+         <form id="reservation" class="top-margin" name="reservation">
+           <div class="container_12">
+             <div class="grid_4">
+                <div class="formrow">
+                  <label for="datefrom" id="labeldatefrom" class="fieldtitle">
+                    <%=(booking_item_family.start_date_literal==:arrival)?(t.new_booking.arrival_date):(t.new_booking.pickup_date)%>
+                  </label> 
+                  <input type="text" name="date_from" id="date_from" class="date_control" size="15" maxlength="10"/>
+                  <% if booking_item_family.time_to_from %>
+                  <input type="text" name="time_from" id="time_from" maxlength="5" size="5" value="<%=booking.time_from%>"/>
+                  <% else %>
+                  <input type="hidden" name="time_from" id="time_from" value="<%=booking.time_from%>"/>
+                  <% end %>
+                </div>
+                <% if booking_item_family.pickup_return_place %>
+                <div class="formrow">
+                  <div class="collection_place">
+                    <label for="pickup_place" class="fieldtitle"><%=t.new_booking.pickup_place%></label>
+                    <select name="pickup_place" class="fieldcontrol" id="pickup_place">
+                    </select>
+                  </div>
+                  <div id="other_pickup_place" class="top-margin" style="display:none;">
+                    <input type="text" name="pickup_place_other" id="pickup_place_other" maxlength="80" size="28"  placeholder="<%=t.new_booking.pickup_place%>"/>
+                  </div>
+                  <input type="hidden" name="pickup_place_value" id="pickup_place_value"/>
+                </div>                      
+                <% end %>     
              </div>
-             <div class="grid_6" style="background-color:rgb(253, 253, 212)">
-               <h3 class="centered_text"><%=t.booking_management_edit.form.new_situation%></h3>
-             </div>             	
+             <div class="grid_4">   
+               <div class="formrow">
+                  <label for="dateto" id="labeldateto" class="fieldtitle">
+                    <%=(booking_item_family.start_date_literal==:arrival)?(t.new_booking.departure_date):(t.new_booking.return_date)%>
+                  </label> 
+                  <input type="text" name="date_to" id="date_to" class="date_control" size="15" maxlength="10"/>
+                  <% if booking_item_family.time_to_from %>
+                  <input type="text" name="time_to" id="time_to" maxlength="5" size="5" value="<%=booking.time_to%>"/>
+                  <% else %>
+                  <input type="hidden" name="time_from" id="time_to" value="<%=booking.time_to%>"/>              
+                  <% end %>
+               </div>
+               <% if booking_item_family.pickup_return_place %>
+               <div class="formrow">
+                 <div class="return_place">
+                    <label for="return_place" class="fieldtitle"><%=t.new_booking.return_place%></label>
+                    <select name="return_place" id="return_place" class="fieldcontrol">
+                    </select>
+                 </div>
+                 <div id="other_return_place" class="top-margin" style="display:none;">
+                    <input type="text" name="return_place_other" id="return_place_other" maxlength="80" size="28" placeholder="<%=t.new_booking.return_place%>"/>  
+                 </div>
+                 <input type="hidden" name="return_place_value" id="return_place_value"/>
+               </div>
+               <% end %>
+             </div>
            </div>
 
-           <div class="container_12">
-             <div class="grid_6">
+           <div id="situation_change" style="display:none">
+            
+             <div class="container_12 top-separator top-margin-2lines">
+               <div class="grid_6">
+                 <h3 class="centered_text"><%=t.booking_management_edit.form.current_situation%></h3>             
+               </div>
+               <div class="grid_6" style="background-color:rgb(253, 253, 212)">
+                 <h3 class="centered_text"><%=t.booking_management_edit.form.new_situation%></h3>
+               </div>               
+             </div>
+
+             <div class="container_12">
+               <div class="grid_6">
                   <div class="element_template">
                     <div class="entity-field">
                        <span><%= t.booking_management.form.days %>:</span>
                        <span style="width: 70px; text-align: right;"><%= booking.days %></span>
                     </div>
                   </div> 
-                  <div class="more_contrast_text top-margin bottom-margin" style="text-decoration:underline; margin-left:5px"><%= t.booking_management.form.extras_title %></div>                 	
+                  <div class="more_contrast_text top-margin bottom-margin" style="text-decoration:underline; margin-left:5px"><%= t.booking_management.form.extras_title %>
+                  </div>                   
                   <div id="extras">
                   </div>
-                  <div class="more_contrast_text top-margin bottom-margin" style="text-decoration:underline; margin-left:5px"><%= t.booking_management_edit.form.current_price %></div>    
+                  <div class="more_contrast_text top-margin bottom-margin" style="text-decoration:underline; margin-left:5px"><%= t.booking_management_edit.form.current_price %>
+                  </div>    
                   <div class="element_template">
                     <div class="entity-field">
                        <span class="entity-fieldlabel"><%= t.booking_management.form.item_cost %></span>
@@ -130,30 +142,27 @@
                        <span class="entity-fieldvalue highlighted_text" style="width: 70px; text-align: right;"><%= "%.2f" % booking.total_cost %></span>
                     </div>
                   </div>
+               </div>
+               <div class="grid_6" style="background-color:rgb(253, 253, 212)">
+                 <div id="new_prices">
+                 </div>                
+               </div>               
              </div>
-             <div class="grid_6" style="background-color:rgb(253, 253, 212)">
-               <div id="new_prices">
-               </div>                
-             </div>             	
            </div>
 
-      </div>
+           <div class="top-separator bottom-margin overflow">
+             <div class="top-margin right-float">
+               <input id="update_button" type="button" value="<%=t.entitymanagement.update%>" class="form-button update-entity-button action-button entity-management-button" style="display:none"/>
+             </div>  
+           </div>     
+         </form>
+       </div>
 
-
-		  <div class="top-separator bottom-margin overflow">
-		     <div class="top-margin right-float">
-	             <input id="update_button" type="button" value="<%=t.entitymanagement.update%>" class="form-button update-entity-button action-button entity-management-button" style="display:none"/>
-		        </div>  
-		     </div>		  
-		  </div>
-
-		</form>
-
-	  </div>
+     </div>
 
 
     <script type="text/tmpl" id="script_extras">
-              <div class="element_template smaller_text">
+              <div class="element_template">
                      <table class="table">
                         <thead class="table-header">
                           <tr>
@@ -185,7 +194,7 @@
 
 
     <script type="text/tmpl" id="script_new_extras">
-              <div class="element_template smaller_text">
+              <div class="element_template">
                      <table class="table">
                         <thead class="table-header">
                           <tr>
@@ -203,7 +212,7 @@
                                <td class="table-cell right_text"><%%= booking.booking_extras[extraIdx].quantity %></td>
                                <td class="table-cell right_text"><%%= booking.booking_extras[extraIdx].unit_cost %></td>
                                <td class="table-cell centered_text">
-                                  <input type="text" size="5" maxlength="10" class="extra-cost" id="booking_extra[<%%=extraIdx%>][extra_unit_cost]" rel="<%%=extraIdx%>"
+                                  <input type="text" size="8" maxlength="10" class="extra-cost price right_text" id="booking_extra[<%%=extraIdx%>][extra_unit_cost]" rel="<%%=extraIdx%>"
                                      name="booking_extra[<%%=extraIdx%>][extra_unit_cost]" value="<%%= new Number(booking.booking_extras[extraIdx].extra_unit_cost).toFixed(2) %>"/>
                                </td>
                                <td class="table-cell centered_text">
@@ -221,7 +230,7 @@
                <div class="element_template">
                  <div class="entity-field">
                    <span><%= t.booking_management.form.days %>:</span>
-                   <span class="more_contrast_text" style="width: 70px; text-align: right;"><%%= booking.days %></span>
+                   <span class="more_contrast_text" style="width: 100px; text-align: right;"><%%= booking.days %></span>
                  </div>
                </div>
                <div class="more_contrast_text top-margin bottom-margin" style="text-decoration:underline; margin-left:5px"><%= t.booking_management.form.extras_title %></div>               	
@@ -231,8 +240,8 @@
                <div class="element_template">
                   <div class="entity-field">
                     <span class="entity-fieldlabel"><%= t.booking_management.form.item_cost %></span>
-                    <span class="entity-fieldvalue" style="width: 70px; text-align: right;">
-                      <input type="text" maxlength="10" size="5" class="right_text" id="item_cost" name="item_cost" value="<%%= new Number(booking.item_cost).toFixed(2) %>"/>
+                    <span class="entity-fieldvalue" style="width: 100px; text-align: right;">
+                      <input type="text" maxlength="10" size="8" class="right_text price" id="item_cost" name="item_cost" value="<%%= new Number(booking.item_cost).toFixed(2) %>"/>
                     </span>
                     <span class="entity-fieldvalue" style="width: 150px; text-align: right; padding-top:12px; padding-bottom:10px">(<%%= (new Number(booking.item_cost/booking.days).toFixed(2)) %> <%=t.booking_management_edit.form.day_cost%>)</span>                    
                   </div>
@@ -240,14 +249,14 @@
                <div class="element_template">
                  <div class="entity-field">
                    <span class="entity-fieldlabel"><%= t.booking_management.form.extras_cost %></span>
-                   <span class="entity-fieldvalue" style="width: 70px; text-align: right;"><%%= new Number(booking.extras_cost).toFixed(2) %>
+                   <span class="entity-fieldvalue" style="width: 100px; text-align: right;"><%%= new Number(booking.extras_cost).toFixed(2) %>
                    </span>
                  </div>
                </div>                     
                <div class="element_template top-separator top-space bottom-margin">
                  <div class="entity-field">
                    <span class="entity-fieldlabel highlighted_text uppercase_text"><%= t.booking_management.form.total_cost %></span>
-                   <span class="entity-fieldvalue highlighted_text" style="width: 70px; text-align: right;"><%%= new Number(booking.total_cost).toFixed(2) %></span>
+                   <span class="entity-fieldvalue highlighted_text" style="width: 100px; text-align: right;"><%%= new Number(booking.total_cost).toFixed(2) %></span>
                  </div>
                </div>           
         </div>
