--- a/views/booking_edit_pickupreturn.js.erb
+++ b/views/booking_edit_pickupreturn.js.erb
@@ -6,7 +6,7 @@
            'YSDListSelector', 'YSDRemoteDataSource', 'json2', 'jquery.validate', 
   	       'jquery.placeholder', 'jquery.ui', 'jquery.ui.datepicker-es', 
   	       'jquery.ui.datepicker.validation',
-  	       'jquery.tools', 'jquery.formparams', 'datejs'], 
+  	       'jquery.tools', 'jquery.formparams', 'datejs', 'autonumeric'], 
   	       function($, YSDForms, DateControl, tmpl, bookingDataSystem,  
   	       ListSelector, RemoteDataSource) {  
   
@@ -108,6 +108,7 @@
 
        	  bookingEditView.showNewPrices();
        	  bookingEditView.showNewExtras();
+          $('.price').autoNumeric('init',{aSep:''});
        	  $('#situation_change').fadeIn();
           $('#update_button').show();
        	       	       	
@@ -294,8 +295,9 @@
 
       // Add the new options
       var comboItems = document.getElementById('pickup_place');
-      for (var pickup_place_id in bookingDataSystem.pickup_places)
-      {
+      if (comboItems) {
+        for (var pickup_place_id in bookingDataSystem.pickup_places)
+        {
           var optionItem = document.createElement('option');
           optionItem.setAttribute('value', pickup_place_id);	
           if (pickup_place_id == bookingEditModel.booking.pickup_place) {
@@ -303,18 +305,20 @@
           }
           optionItem.text = optionItem.innerText = bookingDataSystem.pickup_places[pickup_place_id];
           comboItems.appendChild(optionItem);
+        }
+        <% if booking_allow_custom_pickup_return_place %>
+        var optionItem = document.createElement('option');
+        optionItem.setAttribute('value', '<%=t.new_booking.other%>');  
+        optionItem.text = optionItem.innerText = '<%=t.new_booking.other%>';
+        comboItems.appendChild(optionItem);    
+        <% end %>  
       }
-      <% if booking_allow_custom_pickup_return_place %>
-          var optionItem = document.createElement('option');
-          optionItem.setAttribute('value', '<%=t.new_booking.other%>');  
-          optionItem.text = optionItem.innerText = '<%=t.new_booking.other%>';
-          comboItems.appendChild(optionItem);    
-      <% end %>  
 
       // Add the new options
       comboItems = document.getElementById('return_place');
-      for (var return_place_id in bookingDataSystem.return_places)
-      {
+      if (comboItems) {
+        for (var return_place_id in bookingDataSystem.return_places)
+        {
           var optionItem = document.createElement('option');
           optionItem.setAttribute('value', return_place_id);	
           if (return_place_id == bookingEditModel.booking.return_place) {
@@ -322,15 +326,15 @@
           }          
           optionItem.text = optionItem.innerText = bookingDataSystem.return_places[return_place_id];
           comboItems.appendChild(optionItem);
+        }
+
+        <% if booking_allow_custom_pickup_return_place %>
+        var optionItem = document.createElement('option');
+        optionItem.setAttribute('value', '<%=t.new_booking.other%>');  
+        optionItem.text = optionItem.innerText = '<%=t.new_booking.other%>';
+        comboItems.appendChild(optionItem);    
+        <% end %>  
       }
-
-      <% if booking_allow_custom_pickup_return_place %>
-          var optionItem = document.createElement('option');
-          optionItem.setAttribute('value', '<%=t.new_booking.other%>');  
-          optionItem.text = optionItem.innerText = '<%=t.new_booking.other%>';
-          comboItems.appendChild(optionItem);    
-      <% end %>  
-
       bookingEditView.loadExtras();
     },
 
