--- a/views/bookings_management.erb
+++ b/views/bookings_management.erb
@@ -162,7 +162,7 @@
              <div class="entity-field">
                <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.date_from %></span>
                <span class="entity-fieldvalue">
-                   <%%= self.formatDate(entity.date_from, 'dd.MM.yyyy') %> <%%= entity.time_from?' , '+entity.time_from:'' %>
+                   <%%= self.formatDate(entity.date_from, 'dd.MM.yyyy') %> <% if booking_item_family.time_to_from%> <%%= entity.time_from?' , '+entity.time_from:'' %> <% end %>
                </span>
              </div>
              <% if booking_item_family.pickup_return_place %>
@@ -178,7 +178,7 @@
              <div class="entity-field">
                <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.date_to %></span>
                <span class="entity-fieldvalue">
-                  <%%= self.formatDate(entity.date_to, 'dd.MM.yyyy') %> <%%= entity.time_to?' , '+entity.time_to:'' %> 
+                  <%%= self.formatDate(entity.date_to, 'dd.MM.yyyy') %> <% if booking_item_family.time_to_from%> <%%= entity.time_to?' , '+entity.time_to:'' %> <% end %>
                </span>
              </div> 
              <% if booking_item_family.pickup_return_place %>
@@ -449,10 +449,63 @@
 
         </div>
 
+
+        <div class="top-margin bottom-margin" style="border:1px solid #EEE">
+          <div class="container_12">
+             <div class="grid_6">
+               <div class="more_contrast_text top-margin" style="text-decoration:underline; margin-left:5px"><%= t.booking_management.form.related_bookings %></div>   
+               <div id="linked_bookings">
+               </div>          
+             </div>          
+             <div class="grid_6">
+               <div class="all-space">
+                 <%% if (entity.main_booking_id && entity.main_booking_id != null) { %>
+                 <div>
+                   <button type="button" class="form-button element-action-button top-margin-1line" id="unlink_booking" style="display: block; margin: 1.618em auto" 
+                     data-action-method="POST"
+                     data-action-url="/api/booking/unlink/<%%=entity.id%>"
+                     data-confirm-message="<%=t.booking_management.form.unlink_booking_button_message%>"><%=t.booking_management.form.booking_single%></button>
+                 </div>
+                 <%% } else { %>
+                 <div>
+                   <button type="button" class="form-button top-margin-1line" id="link_booking" style="display: block; margin: 0 auto"><%=t.booking_management.form.booking_group%></button>
+                 </div>                  
+                 <%% } %>
+                 <form name="main_booking" id="main_booking_form" style="display:none">
+                   <input type="hidden" name="id" value="<%%=entity.id%>"/>                 
+                   <div class="element_template">
+                     <div class="entity-field">
+                       <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.main_booking_search %></span>
+                       <span class="entity-fieldvalue">
+                          <input type="text" maxlength="40" size="20" name="search_main_booking" id="search_main_booking"/>
+                          <input type="hidden" name="main_booking_id" id ="main_booking_id" value="<%%=entity.main_booking_id%>"/>
+                       </span>
+                     </div>
+                   </div> 
+                   <div class="guiblock" style="display: none" id="display_selected_booking_container">
+                     <div class="entity-field centered_text" id="display_selected_booking" class="guiblock">
+                     </div>
+                     <div class="navigation-bar bottom-margin" id="link_booking_bar" style="display: none">
+                       <div class="navigation-bar-crud-buttons" style="float: none">
+                         <input type="submit" class="update-entity-button action-button entity-management-button" value="<%=t.booking_management.form.booking_group%>" style="display: block; margin: 0 auto"/>
+                       </div>
+                     </div> 
+                   </div> 
+                 </form>
+               </div>
+             </div>
+          </div>
+        </div>
+
         <ul id="content_tabs" class="no-border no-background"class="no-border no-background">  
           <% if booking_item_family.driver %>
           <li class="no-border no-background top-space" style="border:none; backgrond:none">
             <a name="driver_tab" href="#driver_tab"><%=t.booking_management.form.driver_tab%></a>
+          </li>
+          <% end %>
+          <% if booking_item_family.weight or booking_item_family.height %>
+          <li class="no-border no-background top-space" style="border:none; backgrond:none">
+            <a name="weight_height_tab" href="#weight_height_tab"><%=t.booking_management.form.weight_height_tab%></a>
           </li>
           <% end %>
           <% if booking_item_family.flight %>
@@ -478,9 +531,9 @@
                 <div class="entity-field">
                   <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_name %></span>
                   <span class="entity-fieldvalue">
-                    <input type="text" maxlength="40" size="8" name="driver_name" id="driver_name"
+                    <input type="text" maxlength="40" size="12" name="driver_name" id="driver_name"
                       value="<%%=entity.driver_name%>"/>
-                    <input type="text" maxlength="40" size="10" name="driver_surname" id="driver_surname"
+                    <input type="text" maxlength="40" size="13" name="driver_surname" id="driver_surname"
                       value="<%%=entity.driver_surname%>"/>
                   </span>
                 </div>
@@ -489,7 +542,7 @@
                 <div class="entity-field">
                   <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_date_of_birth %></span>
                   <span class="entity-fieldvalue">
-                     <input type="text" name="driver_date_of_birth" id="driver_date_of_birth" class="date_control" size="10" maxlength="10"/>
+                     <input type="text" name="driver_date_of_birth" id="driver_date_of_birth" class="date_control" size="15" maxlength="10"/>
                   </span>
                 </div>
               </div> 
@@ -501,7 +554,8 @@
                       value="<%%=entity.driver_document_id%>"/>                       
                     </span>
                   </div>
-              </div>               
+              </div>              
+              <% if booking_item_family.driver_license %> 
               <div class="element_template">
                   <div class="entity-field">
                      <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_license_number %></span>
@@ -515,7 +569,7 @@
                   <div class="entity-field">
                      <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_license_date %></span>
                      <span class="entity-fieldvalue">                     
-                        <input type="text" name="driver_driving_license_date" id="driver_driving_license_date" class="date_control" size="10" maxlength="10"/>
+                        <input type="text" name="driver_driving_license_date" id="driver_driving_license_date" class="date_control" size="15" maxlength="10"/>
                      </span>
                   </div>
               </div> 
@@ -528,6 +582,7 @@
                      </span>
                    </div>
               </div>
+              <% end %>
             </div>
             <div class="grid_6">
                <div class="more_contrast_text top-margin" style="text-decoration:underline; margin-left:5px"><%=t.booking_management.form.driver_address_title%></div> 
@@ -604,6 +659,44 @@
            </form>
          </div>
          <% end %>
+
+         <% if booking_item_family.weight or booking_item_family.height %>
+         <div id="weight_height_tab"  class="top-margin bottom-margin">
+           <form name="weight_height" style="border:1px solid #EEE" class="all-space">
+             <input type="hidden" name="id" value="<%%=entity.id%>"/>
+
+            <% if booking_item_family.height %>
+            <div class="formrow bottom-space">
+               <label id="label_height" for="height" class="fieldtitle"><%=t.new_booking.height.label%></label>
+                 <select name="customer_height" id="customer_height" class="fieldcontrol">
+                   <option value=""><%=t.booking_management.form.customer_height_placeholder%></option>
+                     <% booking_item_family.height_values.split(',').each do |height|%>
+                     <option value="<%=height%>" <%% if (entity.customer_height == '<%=height%>') { %>selected="selected"<%%}%>><%=height%></option>
+                     <% end %>
+                 </select>  
+            </div>
+            <% end %>
+            <% if booking_item_family.weight %>
+            <div class="formrow bottom-space">
+               <label id="label_weight" for="customer_weight" class="fieldtitle"><%=t.new_booking.weight.label%></label>
+                 <select name="customer_weight" id="customer_weight" class="fieldcontrol">
+                   <option value=""><%=t.booking_management.form.customer_weight_placeholder%></option>
+                     <% booking_item_family.weight_values.split(',').each do |weight|%>
+                     <option value="<%=weight%>" <%% if (entity.customer_weight == '<%=weight%>') { %>selected="selected"<%%}%>><%=weight%></option>
+                     <% end %>
+                 </select>  
+            </div>            
+            <% end %>
+
+             <div class="navigation-bar bottom-margin">
+               <div class="navigation-bar-crud-buttons right-float right-margin">
+                 <input type="submit" class="update-entity-button action-button entity-management-button" value="<%=t.entitymanagement.update%>"/>
+               </div>
+             </div> 
+           </form>
+         </div>
+         <% end %>
+
          <% if booking_item_family.flight %>
          <div id="flight_tab"  class="top-margin bottom-margin">
            <form name="flight" style="border:1px solid #EEE">
@@ -666,6 +759,30 @@
       
   
      </form>
+</script>
+
+<script type="text/tmpl" id="linked_bookings_script">
+
+                     <table class="table">
+                        <thead class="table-header">
+                          <tr>
+                            <th class="table-cell" scope="col" style="width:40%"><%=t.booking_management.form.id%></th>
+                            <th class="table-cell" scope="col" style="width:30%"><%=t.booking_management.form.customer_title%></th>
+                            <th class="table-cell" scope="col" style="width:30%"><%=t.booking_management.form.item%></th>        
+                          </tr>
+                        </thead>
+                        <tbody class="table-tbody">
+                          <%% for (var idx=0; idx < data.length ; idx++) { %>
+                            <tr class="table-row <%% if (data[idx].main_booking_id==null){%>more_contrast_text<%%}%>">
+                               <td class="table-cell centered_text"><%%=data[idx].id%></td>
+                               <td class="table-cell centered_text"><%%=data[idx].customer_name%> <%%=data[idx].customer_surname%></td>
+                               <td class="table-cell centered_text"><%%=data[idx].item_id%></td>
+                            </tr>
+                          <%% } %>
+                        </tbody>
+                     </table>    
+
+
 </script>
 
 <%= element_form_extension %>
