--- a/views/bookings_management.js.erb
+++ b/views/bookings_management.js.erb
@@ -1,6 +1,6 @@
-require(['jquery', 'YSDEntityManagement','YSDRemoteDataSource', 'YSDSelectSelector', 'YSDForms', 
-         'jquery.ui', 'jquery.ui.datepicker-es', 'jquery.ui.datepicker.validation'],
-    function($, EntityManagement, RemoteDataSource, SelectSelector, YSDForms) {
+require(['jquery', 'YSDEntityManagement','YSDRemoteDataSource', 'YSDSelectSelector', 'YSDForms', 'ysdtemplate', 
+         'jquery.ui', 'jquery.ui.datepicker-es', 'jquery.ui.datepicker.validation', ],
+    function($, EntityManagement, RemoteDataSource, SelectSelector, YSDForms, tmpl) {
 
  
   function BookingHook() {
@@ -50,10 +50,46 @@ require(['jquery', 'YSDEntityManagement','YSDRemoteDataSource', 'YSDSelectSelect
        var valueModel = (entity != null && entity.booking_item != null) ? entity.booking_item.reference : null; 
        var selectorModel = new SelectSelector('booking_item_reference', dataSourceModel, valueModel, true );
 
+       $.ajax({
+               type: 'GET',
+               url : '/api/bookings/linked/'+entity.id,
+               contentType: 'application/json; charset=utf-8',
+               dataType : 'json',
+               success: function(data, textStatus, jqXHR) {
+                 if (data.length > 1) {
+                   $("#linked_bookings").html(tmpl('linked_bookings_script', {data: data}));
+                   if ($('#link_booking').is(':visible')) {                 
+                     $('#link_booking').hide();
+                   }
+                 }
+                 else {
+                   $('#linked_bookings').html('<div class="all-space"><%=t.booking_management.form.booking_single_text%></div>');
+                 }
+               }
+              });       
+
        $('#booking_item_reference').bind('change', function() {
          var url = '/api/booking/assign/' + entity.id + '/' + encodeURIComponent($('#booking_item_reference').val());
          $('#assign_item_button').attr('data-action-url', url);
        });
+
+       $('#link_booking').bind('click', function() {
+           $('#main_booking_form').show();
+           $('#link_booking').hide();
+           $("#search_main_booking").autocomplete({
+             source: "/api/bookings/main-search/"+entity.id,
+             minLength: 1,
+             select: function( event, ui ) {
+               if (ui.item && ui.item.value) {
+                 $('#main_booking_id').val(ui.item.value);
+                 $('#display_selected_booking').html(ui.item.label);
+                 $('#display_selected_booking_container').show();
+                 $('#link_booking_bar').show();
+               }
+              }
+           });
+       });
+
 
     }
 
