--- a/views/booking_catalogs_management.erb
+++ b/views/booking_catalogs_management.erb
@@ -77,6 +77,7 @@
                 <select name="selector" id="selector" class="fieldcontrol">
                   <option value="dates" <%% if (entity && entity.selector=='dates'){%>selected="selected"<%%}%>><%=t.booking_settings.form.reservation_starts_with.dates%></option>
                   <option value="categories" <%% if (entity &&  entity.selector=='categories'){%>selected="selected"<%%}%>><%=t.booking_settings.form.reservation_starts_with.categories%></option>
+                  <option value="shopcart" <%% if (entity &&  entity.selector=='shopcart'){%>selected="selected"<%%}%>><%=t.booking_settings.form.reservation_starts_with.shoppingcart%></option>                  
                 </select>
               </div> 
               <div class="formrow">
